# ECLab-News

./: .env.example  .gitignore  AGENTS.md  README.md  Zhuoyun Wu_Mar.toml  config.toml  flake.nix  generate-md.py  generate-tex.py  pyproject.toml  python-packages.nix  requirements.txt
.github/workflows/: ci.yml  release.yml
files/: Chengjie Yang_Mar.toml  Chuying Wu, Undergraduate, 2023.xlsx  Feiyu Zhang, Undergraduate, 2022.xlsx  Jiaying Lu_Nov.toml  Jingyi Yang202311.toml  Kexin Chen,Undergraduate, 2023.xlsx  Shuoan Li, Undergraduate, 2022(example).xlsx  Shuoan Li, Undergraduate, 2022.xlsx  Ting Chen, Undergraduate, 2023.xlsx  Xinyan Pan, Undergraduate, 2023.xlsx  Xinyan Pan.toml.txt  Yichen Liu, Undergraduate, 2021.xlsx  Yihan Fu, Undergraduate, 2021.xlsx  YouLiTuZiAYi, Undergraduate, 2022.xlsx  Zhuoyun Wu_Mar.toml  Zhuoyun Wu_Nov.toml  lishuoan.toml  liujingli.toml  panxinyan_Mar.toml  xiajianan.toml  xxt-Nov.toml  zhanshiyan.toml  东西情报-11.toml  东西情报-202403-fyh.toml  东西情报-Aug-范旭尧.toml  东西情报-Nov-范旭尧.toml
pandoc/: template.html  theme.css
src/: articles.py  category.py  cli.py  config.py  csv_io.py  journals.py  models.py  processing.py  relevance.py  render.py  site_export.py  summarize.py
src/sources/: abstract_fallback.py  common.py  crossref.py  openalex.py  pubmed.py  scopus.py  semanticscholar.py  springer.py
tex/: Makefile
